<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/show_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_close"
            android:layout_centerInParent="true"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/show_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_logo"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="保持专注，遇见自己\n一段美好的专注时光"
            android:textSize="12sp"
            tools:ignore="HardcodedText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_slogan"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_launcher"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/settings"
                    tools:ignore="HardcodedText,RtlHardcoded"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D3D3D3"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_launcher"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/feedback"
                    tools:ignore="HardcodedText,RtlHardcoded"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D3D3D3"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_launcher"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/mark"
                    tools:ignore="HardcodedText,RtlHardcoded"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D3D3D3"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_launcher"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/share"
                    tools:ignore="HardcodedText,RtlHardcoded"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D3D3D3"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_launcher"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/about"
                    tools:ignore="HardcodedText,RtlHardcoded"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D3D3D3"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="Clownjee"
            tools:ignore="HardcodedText"/>

    </RelativeLayout>
</layout>