<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="presenter"
            type="com.clownjee.tomatoalarmclock.module.time.TimeFragment.Presenter"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="选择一个任务"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="在接下来的25分钟，专注做这件事"
            android:textColor="#666666"
            android:textSize="16sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_work"
                android:layout_width="0dp"
                android:onClick="@{presenter.workOnClick}"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:gravity="center"
                    android:text="@string/work"
                    android:textColor="#999999"/>

                <View
                    android:id="@+id/view_below_work"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:visibility="gone"/>

            </RelativeLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:id="@+id/rl_study"
                android:layout_width="0dp"
                android:onClick="@{presenter.studyOnClick}"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_study"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:gravity="center"
                    android:text="@string/study"
                    android:textColor="#999999"/>

                <View
                    android:id="@+id/view_below_study"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:visibility="gone"/>

            </RelativeLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:id="@+id/rl_think"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_think"
                    android:onClick="@{presenter.thinkOnClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:gravity="center"
                    android:text="@string/think"
                    android:textColor="#999999"/>

                <View
                    android:id="@+id/view_below_think"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:visibility="gone"/>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"/>

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"/>

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_write"
                android:onClick="@{presenter.writeOnClick}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:gravity="center"
                    android:text="@string/write"
                    android:textColor="#999999"/>

                <View
                    android:id="@+id/view_below_write"
                    android:layout_width="wrap_content"
                    android:layout_height="1.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:visibility="gone"/>

            </RelativeLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:id="@+id/rl_sport"
                android:onClick="@{presenter.sportOnClick}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:gravity="center"
                    android:text="@string/sport"
                    android:textColor="#999999"/>

                <View
                    android:id="@+id/view_below_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="1.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:visibility="gone"/>

            </RelativeLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:id="@+id/rl_read"
                android:layout_width="0dp"
                android:onClick="@{presenter.readOnClick}"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:gravity="center"
                    android:text="@string/read"
                    android:textColor="#999999"/>

                <View
                    android:id="@+id/view_below_read"
                    android:layout_width="wrap_content"
                    android:layout_height="1.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>

        <com.clownjee.tomatoalarmclock.view.StateButton
            android:id="@+id/btn_start"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/start"
            android:onClick="@{presenter.startOnClick}"
            app:animationDuration="200"
            app:normalStrokeColor="#6495ED"
            app:normalStrokeWidth="1dp"
            app:normalTextColor="#6495ED"
            app:pressedBackgroundColor="@color/colorPrimaryDark"
            app:pressedTextColor="@android:color/white"
            app:radius="2dp"
            app:round="true"/>

    </LinearLayout>
</layout>